# launchpi

./: README.md
daemon/: .gitignore  Cargo.toml
daemon/src/: main.rs  state.rs
daemon/src/api/: mod.rs
daemon/src/api/routes/: connect.rs  devices.rs  drop.rs  events.rs  mod.rs  root.rs  run.rs
daemon/src/bootstrap/: mod.rs
daemon/src/controllers/: launchpad_mini_mk1.rs  launchpad_mini_mk3.rs  mod.rs
daemon/src/scripts/: mod.rs
daemon/src/scripts/cover/: mod.rs
daemon/src/scripts/demo/: mod.rs
daemon/src/scripts/ping/: mod.rs
daemon/src/scripts/soundboard/: mod.rs
daemon/src/sound/: mod.rs
pkg/extra/: launchpi.service
web/: .postcssrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  Document.tsx  global.css
web/src/components/: DeviceList.tsx  TestGrid.tsx  TestSession.tsx  TestSubscription.tsx
web/src/controllers/: index.ts  launchpad_mini_mk1.ts  launchpad_mini_mk3.ts
web/src/hooks/: useDevices.ts
web/src/types/: WSMessage.ts
