[package]
name = "launchpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
# launchy = { path = "/home/luc/dev/local/launchy" }
launchy = { git = "https://github.com/lucemans/launchy.git" }
midir = { version = "0.9.1", features = ["jack"] }
nanorand = "0.7.0"
rodio = "0.17.3"

axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
lazy_static = "1.4.0"
async-trait = "0.1.75"
rand = "0.8.5"
cpal = { version = "0.15.2" }
zerocopy = "0.7.32"
toml = "0.8.8"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
poem = "3.1.5"
poem-openapi = "5.1.4"
futures = "0.3.31"
